--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://maleeshapa.github.io/",
+  "homepage": "https://maleeshapa.github.io/SayCheese_final/",
   "name": "saycheese",
   "version": "0.1.0",
   "private": true,
